--- a/docs/design/20260126-comments.md
+++ b/docs/design/20260126-comments.md
@@ -393,7 +393,7 @@ mutation UpdateComment($id: String!, $input: CommentUpdateInput!) {
 ```typescript
 interface CommentUpdateInput {
   body?: string;                  // New comment content
-  resolvingCommentId?: string | null;  // Set to comment's own ID to resolve, null to unresolve
+  resolvingUserId?: string | null;  // Set to viewer's ID to resolve, null to unresolve
 }
 ```
 
@@ -409,7 +409,7 @@ mutation DeleteComment($id: String!) {
 
 ### Mutation: Resolve/Unresolve Comment
 
-Comment resolution is handled through the `commentUpdate` mutation using the `resolvingCommentId` field. The `resolvedAt` timestamp is automatically set by Linear when resolved.
+Comment resolution is handled through the `commentUpdate` mutation using the `resolvingUserId` field. The `resolvedAt` timestamp is automatically set by Linear when resolved.
 
 ```graphql
 mutation ResolveComment($id: String!, $input: CommentUpdateInput!) {
@@ -427,16 +427,17 @@ mutation ResolveComment($id: String!, $input: CommentUpdateInput!) {
 }
 ```
 
-**To resolve:** Set `resolvingCommentId` to the comment's own ID (self-reference marks it resolved).
+**To resolve:** Set `resolvingUserId` to the current user's ID.
 
-**To unresolve:** Set `resolvingCommentId` to `null`.
+**To unresolve:** Set `resolvingUserId` to `null`.
 
 ```typescript
-// Resolve
-await commentUpdate(commentId, { resolvingCommentId: commentId });
+// Resolve (requires fetching viewer first)
+const viewer = await getViewer(client);
+await commentUpdate(commentId, { resolvingUserId: viewer.id });
 
 // Unresolve
-await commentUpdate(commentId, { resolvingCommentId: null });
+await commentUpdate(commentId, { resolvingUserId: null });
 ```
 
 ---
@@ -831,10 +832,10 @@ linproj issues comments ENG-123 --json | jq -r '.comments[-1].body'
 - [x] Add E2E tests (`tests/e2e/issues-comment-edit.test.ts`)
 
 ### Phase 4: Thread Resolution
-- [ ] Implement `resolveComment()` API function
-- [ ] Create resolve/unresolve subcommands
-- [ ] Update list display to show resolved status
-- [ ] Add E2E tests (`tests/e2e/issues-comment-resolve.test.ts`)
+- [x] Implement `resolveComment()` API function
+- [x] Create resolve/unresolve subcommands
+- [x] Update list display to show resolved status (was already implemented in Phase 1)
+- [x] Add E2E tests (`tests/e2e/issues-comment-resolve.test.ts`)
 
 ### Phase 5: Integration with `issues get`
 - [ ] Add comments to `issues get` output by default
